# interactive_fiction

./: .gitignore  README.md  TODO  config.py  main.py  pylintrc  pyproject.toml  requirements.txt  web_app.py
.cursor/rules/: genai.mdc  keys.mdc  testing.mdc
characters/: base_character.py  borin_stonehand.json  character_db.py  elenara.json  in_memory_character_db.py  pip_quickstep.json  shadow_whisper.json  sir_kaltor.json
characters/cast/: borin_stonehand.json  elenara.json  pip_quickstep.json  shadow_whisper.json  sir_kaltor.json
core/: game.py  game_master.py  game_state.py  knowledge.py  llm_engine.py
data/: characters.json  items.json  locations.json
docs/: outline.md
entities/: entity.py  entity_db.py  in_memory_entity_db.py
items/: __init__.py  in_memory_item_db.py  item_db.py  items.json
static/: script.js  style.css
templates/: 404.html  500.html  index.html
tests/: run_scene.py  test_character_db.py  test_entity_db.py  test_item_db.py  test_lib.py  test_web_app.py
tests/test_data/: items.json  locations.json
utils/: generate_character_images.py  llm_api.py
